fixed dark mode on android

--- a/src/app/welcome/lang-selection/lang-selection.component.scss
+++ b/src/app/welcome/lang-selection/lang-selection.component.scss
@@ -1,14 +1,13 @@
-
 .title-col {
-  text-align: center;
-  margin-bottom: 24px;
+	text-align: center;
+	margin-bottom: 24px;
 }
 
 .selection-title {
-  font-size: 2.2rem;
-  font-weight: 700;
-  color: var(--ion-color-primary);
-  margin: 0;
+	font-size: 2.2rem;
+	font-weight: 700;
+	color: var(--ion-color-primary);
+	margin: 0;
 }
 
 // .language-col {
@@ -16,32 +15,31 @@
 //   justify-content: center;
 // }
 
-
 .language-flag {
-  width: 50px;
-  height: 40px;
-  border-radius: 20%;
-  overflow: hidden;
-  margin-right: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  align-items: stretch
+	width: 50px;
+	height: 40px;
+	border-radius: 20%;
+	overflow: hidden;
+	margin-right: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	align-items: stretch;
 }
 
 .loading-row {
-  height: 300px;
+	height: 300px;
 }
 
 .loading-col {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .loading-indicator {
-  font-size: 1.2rem;
-  color: var(--ion-color-medium);
+	font-size: 1.2rem;
+	color: var(--ion-color-medium);
 }
 
 ion-row {
