--- a/src/theme/overrides.scss
+++ b/src/theme/overrides.scss
@@ -98,4 +98,6 @@ ion-button[fill="clear"] {
 
 .ion-palette-dark.md {
 	--ion-toolbar-background: #000;
+	--ion-background-color: #000000;
+	--ion-background-color-rgb: 0, 0, 0;
 }
